[package]
name = "ksuinit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# for elf parsing
goblin = { git = "https://github.com/tiann/goblin" }
scroll = "0.12"

anyhow = "1"
# nix = { version = "0.27", features = [ "kmod", "mount", "fs", "process" ] }
rustix = { version = "0.38", features = ["mount", "fs", "runtime"] }
ashmem = "0.1"
# libc = "0.2"
syscalls = { version = "0.6", default-features = false, features = [
    "aarch64",
    "x86_64",
] }

# for kmsg logging
log = "0.4"
kernlog = { git = "https://github.com/tiann/kernlog.rs" }

[profile.release]
strip = true
lto = true
opt-level = "z"
