[package]
name = "ksuinit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# for elf parsing
goblin = { git = "https://github.com/tiann/goblin" }
scroll = "0.12"

anyhow = "1"
rustix = { git = "https://github.com/yujincheng08/rustix.git", rev = "init_module", features = ["mount", "fs", "runtime"] }
ashmem = "0.1"

# for kmsg logging
log = "0.4"
kernlog = { git = "https://github.com/tiann/kernlog.rs" }

[profile.release]
strip = true
lto = true
opt-level = "z"
